fix: style.scss changed gap size

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,7 @@ header {
     .left, .right {
         display: flex;
         align-items: center;
-        gap: 10px;
+        gap: 20px;
         .round {
             width: 25px;
             height: 25px;
